--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 https://github.com/wazo-platform/wazo-lib-rest-client/archive/master.zip
 https://github.com/wazo-platform/wazo-auth-client/archive/master.zip
 https://github.com/wazo-platform/wazo-confd-client/archive/master.zip
+pyexcel-ods
+cliff
