--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,10 @@ commands = black --skip-string-normalization .
 [testenv:linters]
 skip_install = true
 basepython = python3.7
-deps = flake8
-       flake8-colors
-       black
+deps =
+    flake8
+    flake8-colors
+    black
 commands =
     black --skip-string-normalization --check .
     flake8
