--- a/tox.ini
+++ b/tox.ini
@@ -15,28 +15,8 @@ deps =
     -rrequirements.txt
     -rtest-requirements.txt
 
-[testenv:black]
-skip_install = true
-deps = black
-commands = black --skip-string-normalization .
-
 [testenv:linters]
+basepython = python3.10
 skip_install = true
-basepython = python3.9
-deps =
-    flake8
-    flake8-colors
-    black
-commands =
-    black --skip-string-normalization --check .
-    flake8
-
-[flake8]
-exclude =
-    .tox
-    .eggs
-show-source = true
-max-line-length = 99
-# W503: line break before binary operator
-# E203: whitespace before ':' warnings
-ignore = E203, W503
+deps = pre-commit
+commands = pre-commit run --all-files
