--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,9 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = py39
-skipsdist = true
+env_list = py39
+no_package = true
 
 [testenv]
-basepython = python3.9
+base_python = python3.9
 commands =
     pytest wazo_export_import
 deps =
@@ -16,7 +11,7 @@ deps =
     -rtest-requirements.txt
 
 [testenv:linters]
-basepython = python3.10
+base_python = python3.10
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files
