--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-env_list = py39
+env_list = py311,linters
 no_package = true
 
 [testenv]
-base_python = python3.9
+base_python = python3.11
 commands =
     pytest wazo_export_import
 deps =
@@ -11,7 +11,6 @@ deps =
     -rtest-requirements.txt
 
 [testenv:linters]
-base_python = python3.10
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files
